Resolved Sonar code smells, javadoc warnings, and checkstyle findings.